--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 .jumbotron {
 	margin-top: -3%;
+  margin-bottom: -0.2%;
 }
 
 .jumbotron h1 {
@@ -9,11 +10,12 @@
 .rosePortrait {
   display: block;
   margin: auto;
-  width: 300px;
+  width: 250px;
   border-radius: 100%;
   border: solid 5px #000;
 }
 
-.glyphicon.glyphicon-sunglasses {
-  font-size: 1em;
+.secondary {
+  text-align: center;
+  text-shadow: 1px 1px #c0c0c0;
 }
