--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Jumbotron */
+
 .jumbotron {
 	margin-top: -3%;
   margin-bottom: -0.2%;
@@ -7,7 +9,7 @@
   text-shadow: 2px 2px #fff;
 }
 
-.rosePortrait {
+.roseImg {
   display: block;
   margin: auto;
   width: 250px;
@@ -15,7 +17,29 @@
   border: solid 5px #000;
 }
 
+/* Panel */
+
+.panel h3 {
+  text-align: center;
+}
+
 .secondary {
   text-align: center;
   text-shadow: 1px 1px #c0c0c0;
+}
+
+.projectImg {
+  display: block;
+  margin: auto;
+  width: 80%;
+  border-radius: 100%;
+  border: solid 5px #000;
+}
+
+.techUsed {
+  font-weight: bold;
+}
+
+.techDesc {
+  font-style: italic;
 }
