Add basic structure for Education section

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ p {
   border: solid 5px #000;
 }
 
-/* Panel */
+/* Project Panel */
 
 .panel {
   border: none;
@@ -64,5 +64,26 @@ p {
 }
 
 .techDesc {
+  font-style: italic;
+}
+
+/* Background Panel */
+
+h3.bg-h3 {
+  padding-bottom: 6%;
+}
+
+.backgroundImg {
+  float: left;
+  padding: 2%;
+}
+
+.backgroundInfo {
+  text-align: left;
+}
+
+.backgroundDate {
+  float: right;
+  font-weight: bold;
   font-style: italic;
 }
